syntax = "proto2";

package com.tisza.tarock;
option java_package = "com.tisza.tarock.proto";
option java_outer_classname = "EventProto";

message Event
{
	oneof event_type
	{
		StartGame start_game = 1;
		PlayerAction player_action = 2;
		Chat chat = 17;
		Turn turn = 13;
		PlayerTeamInfo player_team_info = 14;
		PlayerCards player_cards = 3;
		PhaseChanged phase_changed = 4;
		AvailableBids available_bids= 5;
		AvailableCalls available_calls = 6;
		ChangeDone fold_done = 7;
		SkartTarock skart_tarock = 8;
		AvailableAnnouncements available_announcements = 9;
		CardsTaken cards_taken = 10;
		Statistics statistics = 11;
		PlayerPoints player_points = 16;
		PendingNewGame pending_new_game = 12;
	}
	message StartGame
	{
		required string game_type = 1;
		required int32 beginner_player = 2;
	}
	message PlayerAction
	{
		required int32 player = 1;
		required string action = 2;
	}
	message Chat
	{
		required int32 user_id = 1;
		required string message = 2;
	}
	message Turn
	{
		required int32 player = 1;
	}
	message PlayerTeamInfo
	{
		required int32 player = 1;
		required bool is_caller = 2;
	}
	message PlayerCards
	{
		repeated string card = 1;
		required bool can_be_thrown = 2;
	}
	message PhaseChanged
	{
		required string phase = 1;
	}
	message AvailableBids
	{
		repeated sint32 bid = 1;
	}
	message AvailableCalls
	{
		repeated string card = 1;
	}
	message ChangeDone
	{
		required int32 player = 1;
	}
	message SkartTarock
	{
		repeated int32 count = 1;
	}
	message AvailableAnnouncements
	{
		repeated string announcement = 1;
	}
	message CardsTaken
	{
		required int32 player = 1;
	}
	message Statistics
	{
		required sint32 caller_game_points = 1;
		required sint32 opponent_game_points = 2;
		repeated AnnouncementResult announcement_result = 3;
		required sint32 sum_points = 4;
		required int32 point_multiplier = 5;

		message AnnouncementResult
		{
			required string announcement = 1;
			required sint32 points = 2;
			required bool caller_team = 3;
		}
	}
	message PlayerPoints
	{
		repeated sint32 point = 1;
		repeated sint32 increment_points = 2;
	}
	message PendingNewGame
	{
	}
}

